# operational-intelligence-engine

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  docker-compose.override.yml  docker-compose.yml  index.html  pyproject.toml
apps/api/: Dockerfile  auth.py  deps.py  main.py  middleware.py  pyproject.toml
apps/api/routes/: ai.py  alerts.py  auth_routes.py  documents.py  events.py  integrations.py  reports.py  rules.py  tenants.py  verticals.py  webhooks.py  websocket.py
apps/edge-agent/: __init__.py  agent.py  config.py  main.py  pyproject.toml
apps/mcp-file-tools/: server.py
apps/mcp-observability-tools/: server.py
apps/mcp-sql-tools/: server.py
apps/mcp-workflow-tools/: server.py
apps/scheduler/: Dockerfile  config.py  jobs.py  main.py  pyproject.toml
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/admin/api-keys/: page.tsx
apps/web/src/app/admin/billing/: page.tsx
apps/web/src/app/admin/team/: page.tsx
apps/web/src/app/ai-copilot/: page.tsx
apps/web/src/app/ai-observability/: page.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/documents/: page.tsx
apps/web/src/app/events/: page.tsx
apps/web/src/app/live/: page.tsx
apps/web/src/app/map/: page.tsx
apps/web/src/app/playbooks/: page.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/app/rules/: page.tsx
apps/web/src/app/rules/builder/: page.tsx
apps/web/src/app/rules/simulate/: page.tsx
apps/web/src/app/rules/templates/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/verticals/: page.tsx
apps/web/src/app/workflows/: page.tsx
apps/web/src/components/: AlertSeverityChart.tsx  EventVolumeChart.tsx  KPICard.tsx  RecentAlerts.tsx  Sidebar.tsx  SystemHealth.tsx
apps/workers/: Dockerfile  main.py  pyproject.toml
apps/workers/tasks/: __init__.py  alerts.py  embedding.py  ingestion.py  maintenance.py  rule_evaluation.py
docs/: ARCHITECTURE.md
