[project]
name = "oie"
version = "0.1.0"
description = "Operational Intelligence Engine - Monorepo Root"
requires-python = ">=3.12"
license = { text = "Proprietary" }

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["packages", "apps"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "TID",   # flake8-tidy-imports
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "FLY",   # flynt
    "PERF",  # perflint
    "FURB",  # refurb
    "LOG",   # flake8-logging
]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # allow function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["oie_common", "oie_db", "oie_schemas", "oie_observability", "oie_storage", "oie_ai", "oie_rules", "oie_events", "oie_domain"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20"]
"scripts/**/*.py" = ["T20"]
"alembic/**/*.py" = ["ERA001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "unit: marks unit tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["packages", "apps"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
