[project]
name = "oie-workers"
version = "0.1.0"
description = "OIE background task workers powered by ARQ"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "arq",
    "redis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
